修改导航界面

--- a/third-stage/views/base/nav.ejs
+++ b/third-stage/views/base/nav.ejs
@@ -179,7 +179,6 @@ a{
         <a href="/login"><span class="login">登录</span></a>
         <input class="search" placeholder="大家正在搜：护肤套装">
         <span class="list"><img src="/images/index/list1.png"></span>
-
     </div>
     <!-- 搜索下方导航栏 -->
     <div class="clear nav1">
@@ -300,6 +299,11 @@ a{
      var myScroll1 = new IScroll('.scrollBar',{
             scrollX: true
         })
+        // 点击搜索跳转不同连接
+        var search=focument.querySelector('.search')
+        search.onclick=function(){
+            location.href='/search'
+        }
         // 搜索框右边的列表
         var list=document.querySelector('.list')
         list.onclick=function(){
