--- a/third-stage/public/stylesheets/lastcrazy/search.css
+++ b/third-stage/public/stylesheets/lastcrazy/search.css
@@ -19,106 +19,67 @@
     font-size:30px;
     color:#585c64;
 }
-.search .placeholder{
+.search.placeholder{
     color: #98989f;
+    font-size: .37333rem;
+    left: .26667rem;
+    text-align: left;
+    right: 0;
+    height: 100%;
+    overflow: hidden;
+    line-height: .8rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    position: absolute;
+    top: 50%;
+    transform: translate3d(0,-50%,0);
+    -webkit-transform: translate3d(0,-50%,0);
 }
 .search{
-    width:26rem;
+    width:70%;
     height:3rem;
     border-radius:7rem;
     border:none;
     outline:0;
     font-size:15px;
-    padding:0 2rem;
+    padding:0 1rem;
     border:1px solid #EDEDED;
     background:#F3F4F5;
     color:#C1C2C6;
 }
 .list{
+    width: 10%;
     font-size: 14px;
     font-weight: 400px;
     color: #585c64;
+    right: 0;
 }
-
-
-
-.k3-top{
-    width:100%;
-    height:4rem;
-    display:flex;
-    justify-content:space-around;
-    align-items:center;
-}
-#k3-topp{
-    padding:5px 0px 0px 10px;
-    font-size: 30px;
-    color: #999;
-}
-.k3-search{
-    width: 100%;
-    height: 30px;
-    float: left;
-    padding:15px;
-    box-sizing: border-box;
-    position: relative;
-}
-.k3-search>span{
-    top: 22px;
-    left: 23px;
-    width: 10%;
-    height: 25px;
-    position: absolute;
-    font-weight: 10px;
-    color: #999;
-    font-size: 14px;
-
-}
-.k3-search>input{
-    height: 30px;
-    width: 88%;
-    box-sizing: border-box;
-    padding: 10px 10px 10px 30px;
-    border-radius: 5px;
-    border:none;
-    outline: none;
-    font-weight: 10px;
-    background: #f8f8f8;
-}
-.k3-search>button{
-    height: 30px;
-    width: 10%;
-    box-sizing: border-box;
-    color: black;
-    font-weight: 900px;
-    float: right;
-    border:none;
-    font-size: 16px;
-    background: transparent;
-    outline: none;
-}
-.k3-remenbiaoqian{
+.remenbiaoqian{
     height:600px;
     background: white;
 }
-.k3-remen{
-    padding:0px 0px 0px 15px;
-    font-size: 16px;
-    color: rgb(90, 87, 87);
+.remen{
+    padding:2rem 0px 0px 15px;
+    font-size: 12px;
+    color: black;
     background: white;
 }
-.k3-biaoqian{
+.biaoqian{
     padding: 0px 15px 15px 15px;
     width: 100%;
     height: 80%;
 }
-.k3-biaoqian>button{
-    margin:15px 10px 0px 0px ;
-    padding: 10px 10px;
-    border-radius: 5px;
+.biaoqian>button{
+    margin:1rem 1rem  0px 0px ;
+    padding: 0.5rem 1rem ;
+    border-radius: 0.2rem;
     box-sizing: border-box;
-    color: #666666;
-    border:none;
-    font-size: 14px;
+    color: #5d78ab;
+    border:#5d78ab 0.0333333333rem solid;
+    font-size: 12px;
     outline: none;
-    background: #f8f8f8;
+}
+.biaoqian>button:first-child{
+    color: #e4007f;
+    border-color: #f7add6;
 }
