--- a/third-stage/views/search.ejs
+++ b/third-stage/views/search.ejs
@@ -4,32 +4,23 @@
     <div id="login">
         <a href="/login"><span class="fa fa-angle-left"></span></a>
         <input class="search" placeholder="大家正在搜：护肤套装">
-        <span class="list">登录</span>
+        <span class="list">搜索</span>
     </div>
-
-
-    <!-- <div id="login">
-        <p class="fa fa-angle-left" id="k3-topp"></p>
-        <div class="k3-search">
-            <span  class="fa fa-search"></span>
-            <input type="text" placeholder="输入商家、商品名称">
-            <button>搜索</button>
+    <div class="remenbiaoqian">
+        <p class="remen">热门搜索</p>
+        <div class="biaoqian">
+            <button>口碑爆款</button>
+            <button>女式大衣</button>
+            <button>女鞋</button>
+            <button>护肤套装</button>
+            <button>连衣裙</button>
+            <button>女式羽绒服</button>
+            <button>女式外套</button>
+            <button>女皮衣/皮草</button>
+            <button>女式套装</button>
+            <button>女式风衣</button>
+            <button>女单鞋</button>
+            <button>女式针织衫</button>
         </div>
-    </div> -->
-    <!-- <div class="k3-xiala"></div>
-    <div class="k3-remenbiaoqian">
-        <p class="k3-remen">热门搜索</p>
-        <div class="k3-biaoqian">
-            <button>青橙蛋糕</button>
-            <button>水果捞</button>
-            <button>饺子</button>
-            <button>黄焖鸡</button>
-            <button>香辣鸡排</button>
-            <button>蛋糕</button>
-            <button>米线</button>
-            <button>焖面</button>
-            <button>小炒肉</button>
-            <button>奶茶</button>
-        </div>
-    </div> -->
+    </div>
     <% include base/foot.ejs%>
