--- a/third-stage/views/base/head.ejs
+++ b/third-stage/views/base/head.ejs
@@ -15,6 +15,7 @@
         <script src="/javascripts/quadro/iscroll/iscroll.js"></script>
         <script src="/javascripts/quadro/mui/mui.js"></script>
         <script src="/javascripts/quadro/swiper/swiper.js"></script>
+        <script src="/javascripts/quadro/layer.js"></script>
         <style>
            *{
             padding: 0;
