--- a/third-stage/views/lastcrazy.ejs
+++ b/third-stage/views/lastcrazy.ejs
@@ -10,10 +10,11 @@
         <div class="smwy"></div>
         <div class="smwy"></div>
     </div>
-    <ul class="bg-white hrem4 w100 lsnone">
+    <ul class="bg-white hrem4 w100 lsnone" id="ul">
         <li class="nav-text1 fw" id="jrfq">今日疯抢(215) </li>
         <li class="nav-text2 fw" id="xqyg">下期预告(29)</li>
     </ul>
+    <!-- 今日疯抢    上新页 -->
     <div class="shangxin">
         <div class="sxtitle"><img src="/images/lastcrazy/shangxin.webp" alt=""></div>
         <% for (var i=0;i<data.length;i++){%>
@@ -32,7 +33,6 @@
                     </div>
                 <% } %> 
             </div>
-           
                 <div class="sx3">
                     <span><%= data[i].shop%></span>
                     <span class="sx3-r">仅剩</span>
@@ -42,56 +42,28 @@
             </div>
         <% } %> 
     </div>
+    <!-- 下期预告   -->
     <div class="yugao">
-        <div class="yg1">
-            <img src="/images/lastcrazy/yg-1.webp" alt="">
-            <span>到手价3折封顶</span>
-            <div class="kaiqiang">
-               <span class="fw">今日</span> 
-               <span id="time">10</span>
-               <span>:</span>
-               <span id="time">00</span> 
-               <span class="fw">开抢</span> 
-               <button>抢先收藏 ></button>
+        <% for (var y=0;y<yugao.length;y++){%>
+            <div class="yg1">
+                <img src=<%= yugao[y].img%> alt="">
+                <span>到手价3折封顶</span>
+                <div class="kaiqiang">
+                    <span class="fw">今日</span> 
+                    <span id="time">10</span>
+                    <span>:</span>
+                    <span id="time">00</span> 
+                    <span class="fw">开抢</span> 
+                    <button>抢先收藏 ></button>
+                </div>
             </div>
-        </div>
-        <div class="yg1">
-            <img src="/images/lastcrazy/yg-1 (1).webp" alt="">
-            <span>到手价3折封顶</span>
-            <div class="kaiqiang">
-               <span class="fw">今日</span> 
-               <span id="time">10</span>
-               <span>:</span>
-               <span id="time">00</span> 
-               <span class="fw">开抢</span> 
-               <button>抢先收藏 ></button>
-            </div>
-        </div>
-        <div class="yg1">
-            <img src="/images/lastcrazy/yg-1 (2).webp" alt="">
-            <span>到手价3折封顶</span>
-            <div class="kaiqiang">
-               <span class="fw">今日</span> 
-               <span id="time">10</span>
-               <span>:</span>
-               <span id="time">00</span> 
-               <span class="fw">开抢</span> 
-               <button>抢先收藏 ></button>
-            </div>
-        </div>
-        <div class="yg1">
-            <img src="/images/lastcrazy/yg-1 (3).webp" alt="">
-            <span>到手价3折封顶</span>
-            <div class="kaiqiang">
-               <span class="fw">今日</span> 
-               <span id="time">10</span>
-               <span>:</span>
-               <span id="time">00</span> 
-               <span class="fw">开抢</span> 
-               <button>抢先收藏 ></button>
-            </div>
-        </div>
+        <% } %>
     </div>
+    <!-- 回到顶部 -->
+    <div id="back">
+        <i class="fa fa-angle-up" style="font-size:27px;color:#fff;"></i>
+    </div>
+
     <script>
         var jrfq = document.querySelector('#jrfq')
         var xqyg = document.querySelector('#xqyg')
@@ -110,6 +82,19 @@
             jrfq.style.border ='white'
         }
 
+
+        //  一键回顶部
+        var back=document.querySelector('#back')
+        window.onscroll=function(){
+            if(window.scrollY>500){
+                back.style.display='block'
+            }else{
+                back.style.display='none'
+            }
+        }
+        back.onclick=function(e){
+            window.scrollTo(0,0)
+        }
     </script>
     
 <% include base/foot.ejs%>
