--- a/third-stage/public/stylesheets/clothing/clothing.css
+++ b/third-stage/public/stylesheets/clothing/clothing.css
@@ -1,67 +1,64 @@
- .content{
-     width: 100%;
-     padding:0.7rem;
-     display:flex;
-     flex-wrap:wrap;
-     justify-content: space-between;
-     background: #ffffff;
+.content{
+    width: 100%;
+    padding:0.7rem;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+    background:#F3F4F5;
 }
- .wanzhengdiv{
-     width:49%;
-     height:21rem;
-     background:#fff;
-     border-radius:5%;
-     overflow: hidden;
-     margin-bottom: 0.7rem;
+.wanzhengdiv{
+    width:49%;
+    height:25rem;
+    background:#fff;
+    border-radius:5%;
+    overflow: hidden;
+    margin-bottom: 0.7rem;
 } 
-  .imagebox{
-      width:100%;
+ .imagebox{
+     width:100%;
 } 
-  .image{
-      width:100%;
-  }
+ .image{
+     width:100%;
+ }
 .below{
-   padding: 0.7rem;
+ /* display: flex; */
+  padding: 0.8rem;
+  height: 40%;
 }
-/* .below span{
-    font-size: 1.5rem;
-} */
 .fs14{
-    font-size: 1.7rem;
-    font-weight: 800;
-}
-.mt5{
-    margin-top: 1rem;
+   font-size: 1.7rem;
+   font-weight: 800;
 }
 #fs13{
-    color: #98989f;
-    font-size: 1.4rem;
-    text-decoration: line-through;
+   color: #98989f;
+   font-size: 1.4rem;
+   text-decoration: line-through;
 }
 #fs12{
-    color: #98989f;
-    font-size: 1.4rem;
+   color: #98989f;
+   font-size: 1.4rem;
 }
 .fs1{
-    font-size: 0.5rem;
-    color:#585C64;
+   font-size: 0.5rem;
+   color:#585C64;
+}
+.linediv{
+   display:flex;
+   justify-content:space-between;
 }
 .by{
-    background: #CD73D7;
-    height: 2rem;
-    width:3rem ;
-    padding: 0.1rem;
-    color:#fff;
-    border-radius: 10%;
-    font-size:1.5rem;
+   background: linear-gradient(90deg,#de3d96,#cb78dc);
+   border-radius: 10%;
+   display:block;
+   padding:0 0.2rem;
+   color:#fff;
+   font-size:1.3rem;
 }
 .zhi{
-    background: #CD73D7;
-    height: 2rem;
-    width:3rem ;
-    padding: 0.1rem;
-    color:#fff;
-    border-radius: 10%;
-    font-size:1.5rem; 
+    background: linear-gradient(90deg,#de3d96,#cb78dc);
+    display:block;
+    padding:0 0.2rem;
+   color:#fff;
+   border-radius: 10%;
+   font-size:1.5rem; 
 }
-
